syntax = "proto3";

option java_package = "com.grpc.greet";

option java_multiple_files = true;

message  Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetEveryoneRequest{
  Greeting greeting = 1;
}

message GreetEveryoneResponse{
  string result = 1 ;
}

service GreetService{

  //BiDi
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};

}